# onomondo-ipa

./: .gitignore  CMakeLists.txt  CODEOWNERS  Makefile.am  README.md  configure.ac
asn1/: 0001-PKIX1Explicit88-remove-broken-constraint-check-in-Ce.patch  0001-asn_internal-use-custom-memory-allocator-functions.patch  PEDefinitions.asn  PKIX1Explicit88.asn  RSPDefinitions.asn  SGP32Definitions.asn  regenerate_libasn.sh
contrib/: sample_eim_cfg.ber
include/: Makefile.am
include/onomondo/: Makefile.am
include/onomondo/ipa/: Makefile.am  http.h  http_hdr.h  ipad.h  log.h  mem.h  scard.h  utils.h
src/: CMakeLists.txt
src/ipa/: CMakeLists.txt  Makefile.am  http.c  main.c  scard.c
src/ipa/.deps/: smartcard.Po
src/ipa/libasn/: ADFRFMAccess.c  ADFRFMAccess.h  AccessDescription.c  AccessDescription.h  AddEimResult.c  AddEimResult.h  AddInitialEimRequest.c  AddInitialEimRequest.h  AddInitialEimResponse.c  AddInitialEimResponse.h  AdministrationDomainName.c  AdministrationDomainName.h  AlertData.c  AlertData.h  AlgoParameter.c  AlgoParameter.h  AlgorithmIdentifier.c  AlgorithmIdentifier.h  AnotherName.c  AnotherName.h  ApplicationIdentifier.c  ApplicationIdentifier.h  ApplicationInstance.c  ApplicationInstance.h  ApplicationLoadPackage.c  ApplicationLoadPackage.h  ApplicationSystemParameters.c  ApplicationSystemParameters.h  Attribute.c  Attribute.h  AttributeType.c  AttributeType.h  AttributeTypeAndValue.c  AttributeTypeAndValue.h  AttributeValue.c  AttributeValue.h  AuthenticateClientOk.c  AuthenticateClientOk.h  AuthenticateClientOkDPEsipa.c  AuthenticateClientOkDPEsipa.h  (+960 more)
src/ipa/libipa/: CMakeLists.txt  Makefile.am  activation_code.c  activation_code.h  bpp_segments.c  bpp_segments.h  cmn_cancel_sess_proc.c  cmn_cancel_sess_proc.h  cmn_mtl_auth_proc.c  cmn_mtl_auth_proc.h  context.h  eim_package.c  eim_package.h  es10a_get_euicc_cfg_addr.c  es10a_get_euicc_cfg_addr.h  es10b.c  es10b.h  es10b_add_init_eim.c  es10b_add_init_eim.h  es10b_auth_serv.c  es10b_auth_serv.h  es10b_cancel_session.c  es10b_cancel_session.h  es10b_enable_using_dd.c  es10b_enable_using_dd.h  es10b_euicc_mem_rst.c  es10b_euicc_mem_rst.h  es10b_get_certs.c  es10b_get_certs.h  es10b_get_eid.c  es10b_get_eid.h  es10b_get_eim_cfg_data.c  es10b_get_eim_cfg_data.h  es10b_get_euicc_challenge.c  es10b_get_euicc_challenge.h  es10b_get_euicc_chlg.c  es10b_get_euicc_chlg.h  es10b_get_euicc_info.c  es10b_get_euicc_info.h  es10b_get_rat.c  (+69 more)
tests/: CMakeLists.txt  Makefile.am  testsuite.at
tests/activation_code/: CMakeLists.txt  Makefile.am  activation_code_test.c  activation_code_test.err  activation_code_test.ok
tests/bpp_segments/: CMakeLists.txt  bpp.ber  bpp_segments_test.c  bpp_segments_test.err  bpp_segments_test.ok
tests/utils/: CMakeLists.txt  Makefile.am  utils_test.c
